test/e2e/testdata/backendtrafficpolicy-translation-failed.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-ratelimit
  namespace: gateway-conformance-infra
spec:
  parentRefs:
    - name: same-namespace
  hostnames: ["www.example.com"]
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /myapp  # This is the path that will be protected by OIDC
      backendRefs:
        - name: infra-backend-v1
          port: 8080
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: policy-httproute
  namespace: gateway-conformance-infra
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: http-ratelimit
  rateLimit:
    type: Global
    global:
      rules:
        - clientSelectors:
            - headers:
                - name: x-user-id
                  type: RegularExpression
                  value: "*.illegal.regex"
          limit:
            requests: 10
            unit: Hour
      type: Global
